--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=striking">striking</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528915198"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    260 points
+                                    262 points
                                 </span>
                             </td>
                         </tr>
@@ -527,19 +527,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://recurse.henrystanley.com/post/better">How to become a dramatically better programmer</a>
+                                    <a href="https://developer.mozilla.org/en-US/docs/Web/API/Console/table">Console.table()</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17286521">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17307123">
                                         
-                                            57 comments
+                                            75 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=henryaj">henryaj</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528738685"
+                                            href="https://news.ycombinator.com/user?id=koolba">koolba</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528925365"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    236 points
+                                    238 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/higgsfield/RL-Adventure-2">Reinforcement Learning: From Zero to State of the Art with Pytorch 4</a>
+                                    <a href="https://recurse.henrystanley.com/post/better">How to become a dramatically better programmer</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17261063">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17286521">
                                         
-                                            14 comments
+                                            57 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=codentropy">codentropy</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528411873"
+                                            href="https://news.ycombinator.com/user?id=henryaj">henryaj</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528738685"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     236 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528974009" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528974609" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
