--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://laravelfactory.com/blog/php-composer-tutorial">‍ What, Why and How of PHP Composer ️</a>
+                                    <a href="https://www.reuters.com/article/us-tesla-stocks-shorts/tesla-short-sellers-2-billion-in-the-red-for-june-as-shares-soar-idUSKBN1J82OX">Tesla short sellers $2B in the red for June as shares soar</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17309239">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17306699">
                                         
-                                            20 comments
+                                            52 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=laravelfactory">laravelfactory</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528949770"
+                                            href="https://news.ycombinator.com/user?id=antman">antman</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528922149"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    29 points
+                                    79 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528975207" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528975811" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
