--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/articles/2018-06-14/elon-musk-s-boring-co-wins-chicago-airport-high-speed-train-bid">Elon Musk’s Boring Co. Wins Chicago Airport High-Speed Train Bid</a>
+                                    <a href="https://www.howtographql.com/">How to GraphQL – A Fullstack Tutorial for GraphQL</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17308935">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17304559">
                                         
-                                            228 comments
+                                            47 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528945471"
+                                            href="https://news.ycombinator.com/user?id=evo_9">evo_9</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528907131"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    243 points
+                                    250 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528980007" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528980612" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
