--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://jamanetwork.com/journals/jamaotolaryngology/fullarticle/2683621">Long-term health risks after having adenoids or tonsils removed in childhood</a>
+                                    <a href="https://blog.ycombinator.com/hacker-news-highlights-april-may-2018/">Hacker News Highlights: April and May 2018</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17309343">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17268150">
                                         
-                                            125 comments
+                                            40 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=tankerslay">tankerslay</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528951389"
+                                            href="https://news.ycombinator.com/user?id=craigcannon">craigcannon</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528481245"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    215 points
+                                    216 points
                                 </span>
                             </td>
                         </tr>
@@ -437,7 +437,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17307023">
                                         
-                                            73 comments
+                                            75 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=conductor">conductor</a></strong> &nbsp;•&nbsp;
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528982411" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528983009" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
