--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -395,7 +395,7 @@
                                             href="https://news.ycombinator.com/user?id=lentil_soup">lentil_soup</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528806826"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    394 points
+                                    395 points
                                 </span>
                             </td>
                         </tr>
@@ -413,13 +413,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17300893">
                                         
-                                            420 comments
+                                            422 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mhoad">mhoad</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528873230"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    371 points
+                                    372 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/@enjalot/the-trouble-with-d3-4a84f7de011f">The Trouble with D3</a>
+                                    <a href="https://netflix.github.io/pollyjs/#/">Polly.js – Record, replay, and stub HTTP interactions</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17298072">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17308246">
                                         
-                                            153 comments
+                                            67 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528838092"
+                                            href="https://news.ycombinator.com/user?id=zwentz">zwentz</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528936128"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    340 points
+                                    346 points
                                 </span>
                             </td>
                         </tr>
@@ -606,7 +606,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528983009" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528983611" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
