--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/@ard_adam/code-reviews-are-broken-here-is-how-to-fix-them-c34497f1721b">Code Reviews are Broken</a>
+                                    <a href="http://www.fno.org/grazing1.html">Grazing the Net (1994)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17307875">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17306938">
                                         
-                                            4 comments
+                                            2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=aard">aard</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528932026"
+                                            href="https://news.ycombinator.com/user?id=mverwijs">mverwijs</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528923940"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    9 points
+                                    11 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528985409" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528986005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
