--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -341,13 +341,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17306699">
                                         
-                                            56 comments
+                                            57 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=antman">antman</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528922149"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    80 points
+                                    82 points
                                 </span>
                             </td>
                         </tr>
@@ -395,7 +395,7 @@
                                             href="https://news.ycombinator.com/user?id=janvdberg">janvdberg</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528956272"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    20 points
+                                    21 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://antirez.com/news/119">Redis Lua scripting: several security vulnerabilities fixed</a>
+                                    <a href="https://www.newyorker.com/elements/lab-notes/the-strange-fading-call-of-the-narwhal">The Strange, Fading Call of the Narwhal</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17305141">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17308736">
                                         
-                                            22 comments
+                                            6 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=itamarhaber">itamarhaber</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528910436"
+                                            href="https://news.ycombinator.com/user?id=raleighm">raleighm</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528942694"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    54 points
+                                    27 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528987208" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528987808" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
