--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://discrete.gr/complexity/">A Gentle Introduction to Algorithm Complexity Analysis</a>
+                                    <a href="https://arxiv.org/abs/1803.06824">Are real numbers really real?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17301224">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17291752">
                                         
-                                            2 comments
+                                            232 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ColinWright">ColinWright</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528877378"
+                                            href="https://news.ycombinator.com/user?id=d3ckard">d3ckard</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528793871"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    143 points
+                                    144 points
                                 </span>
                             </td>
                         </tr>
@@ -389,7 +389,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17297673">
                                         
-                                            39 comments
+                                            40 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528989007" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528989610" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
