--- a/top-product-shows/index.html
+++ b/top-product-shows/index.html
@@ -140,13 +140,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17398037">
                                         
-                                            comments
+                                            4 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dasil003">dasil003</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1529990382"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    8 points
+                                    12 points
                                 </span>
                             </td>
                         </tr>
@@ -276,7 +276,7 @@
                                             href="https://news.ycombinator.com/user?id=zzarcon">zzarcon</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1529927668"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    35 points
+                                    36 points
                                 </span>
                             </td>
                         </tr>
@@ -552,7 +552,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529995807" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529996413" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
