--- a/top-stories/daily/page5.html
+++ b/top-stories/daily/page5.html
@@ -266,7 +266,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17395898">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=nunodio">nunodio</a></strong> &nbsp;•&nbsp;
@@ -578,7 +578,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1530020412" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1530021013" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
