--- a/top-stories/daily/page6.html
+++ b/top-stories/daily/page6.html
@@ -240,7 +240,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17395455">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=digital55">digital55</a></strong> &nbsp;•&nbsp;
@@ -420,7 +420,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1530037814" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1530038415" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
