--- a/top-product-shows/index.html
+++ b/top-product-shows/index.html
@@ -166,7 +166,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17406123">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=deadcoder0904">deadcoder0904</a></strong> &nbsp;•&nbsp;
@@ -198,7 +198,7 @@
                                             href="https://news.ycombinator.com/user?id=flaviocopes">flaviocopes</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1529997008"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    244 points
+                                    245 points
                                 </span>
                             </td>
                         </tr>
@@ -224,7 +224,7 @@
                                             href="https://news.ycombinator.com/user?id=yoshiokatsuneo">yoshiokatsuneo</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1530000694"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    96 points
+                                    97 points
                                 </span>
                             </td>
                         </tr>
@@ -552,7 +552,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1530082208" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1530082812" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
