--- a/top-product-shows/index.html
+++ b/top-product-shows/index.html
@@ -400,13 +400,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17415900">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=braindead_in">braindead_in</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1530184680"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    9 points
+                                    10 points
                                 </span>
                             </td>
                         </tr>
@@ -552,7 +552,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1530241209" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1530241812" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
